<resources>
    <string name="app_name">MAON ASSESSMENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="founded_text">Founded:</string>
    <string name="nickname_text">NickName:</string>
    <string name="address_text">Address:</string>
    <string name="phone_number_text">Phone Number:</string>
    <string name="website_text">Website:</string>
    <string name="email_address_text">Email Address:</string>
    <string name="club_colors_text">Club colors:</string>
    <string name="team_players_text">Team Players</string>
    <string name="club_details_text">Club Details</string>
    <string name="club_logo_content_description">Club Logo</string>
    <string name="team_logo_content_description">Team logo</string>
    <string name="start_date">Start date: %s</string>
    <string name="start_date_span">Start date:</string>
    <string name="no_item_to_display">No item to display</string>
</resources>